--- a/Server/package.json
+++ b/Server/package.json
@@ -9,6 +9,7 @@
   "author": "ayush jain",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^5.0.0",
     "cookie-parser": "^1.4.7",
